<resources>
    <string name="app_name">Wifi Tracker</string>
    <string name="string_start">Start measuring</string>
    <string name="string_num_samp">Number of samples</string>
    <string name="string_room">Room</string>
    <string name="string_floor">Floor</string>
    <string name="string_building">Building</string>
    <string name="export_db">Export samples database</string>
    <string name="send_db">Send your contribution</string>
    <string name="empty_db">Clean up the database</string>
    <string name="empty_file">Clean up the folder</string>
    <string-array name="buildings_array">
        <item>Polo A</item>
        <item>Polo B</item>
        <item>Polo C</item>
        <item>Polo F</item>
    </string-array>
    <string-array name="rooms_polo_a">
        <item>A11</item>
        <item>A12</item>
        <item>A13</item>
        <item>A21</item>
        <item>A22</item>
        <item>A23</item>
        <item>A24</item>
        <item>A25</item>
        <item>A26</item>
        <item>A28</item>
    </string-array>
    <string-array name="rooms_polo_b">
        <item>B11</item>
        <item>B21</item>
        <item>B22</item>
        <item>B23</item>
        <item>B24</item>
        <item>B25</item>
        <item>B31</item>
        <item>B32</item>
        <item>B33</item>
        <item>B34</item>
        <item>SI1</item>
        <item>SI3</item>
        <item>SI4</item>
        <item>SI5</item>
        <item>SI6</item>
        <item>SI7</item>
    </string-array>
    <string-array name="rooms_polo_c">
        <item>C01</item>
        <item>C11</item>
        <item>C21</item>
        <item>C22</item>
        <item>C31</item>
        <item>C32</item>
        <item>C33</item>
        <item>C42</item>
        <item>C43</item>
        <item>C44</item>
    </string-array>
    <string-array name="rooms_polo_f">
        <item>F1</item>
        <item>F2</item>
        <item>F3</item>
        <item>F4</item>
        <item>F5</item>
        <item>F6</item>
        <item>F7</item>
        <item>F8</item>
        <item>F9</item>
    </string-array>
    <string-array name="samples_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
